[package]
name = "simplehttp"
version = "0.1.0"
authors = ["MikeBeller <bellermike@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-server = "0.4.0"
log = "0.4.8"
env_logger = "0.7.1"
ureq = "0.11.3"
